--- a/sp-config/user-service-dev.yml
+++ b/sp-config/user-service-dev.yml
@@ -1,6 +1,6 @@
 sp:
   user-service:
-    users: "[{\"id\":7, \"username\":\"abc\",\"password\":\"123\"},{\"id\":8, \"username\":\"def\",\"password\":\"456\"},{\"id\":9, \"username\":\"aaaa\",\"password\":\"11111\"}]"
+    users: "[{\"id\":7, \"username\":\"abc\",\"password\":\"123\"},{\"id\":8, \"username\":\"def\",\"password\":\"456\"},{\"id\":9, \"username\":\"shalixiaohu\",\"password\":\"shalixiaohu\"}]"
 
 spring:
   application:
