--- a/sp-config/user-service-dev.yml
+++ b/sp-config/user-service-dev.yml
@@ -1,7 +1,11 @@
 sp:
   user-service:
     users: "[{\"id\":7, \"username\":\"abc\",\"password\":\"123\"},{\"id\":8, \"username\":\"def\",\"password\":\"456\"},{\"id\":9, \"username\":\"shalixiaohu\",\"password\":\"shalixiaohu\"}]"
-
+  rabbitmq:
+    host: 192.168.109.131
+    port: 5672
+    username: admin
+    password: admin
 spring:
   application:
     name: user-service
